Changes towards version 0.7:
- OpenGL texture loading uses surface pitch instead of screen width.  
  This should head off future bugs similar to Bug #740 (this issue was 
  reported as Bug #956) - Michael

0.6.2 (maintenance release):
- A bit more debug info for failed connects. - SvdB
- Exit with failure if basic content cannot be found, ensuring proper
  error reporting under Windows - Michael
- Popup windows for "Really Exit?" and Game Pause are immune to fades 
  and crossfades (Bug #455) - Michael
- No longer depend on SDLK_LAST statically; key input should now be safe 
  if compiled with a different version of SDL than the one running the 
  program (Bug #936, possibly also #834 and #883) - Michael
- Unix build scripts now work under LC_CTYPE=tr_TR - SvdB
- Flush write buffer when doing a uio_fclose() after doing only
  uio_fwrite() operations. - SvdB
- Major rewrite of the SwapBuffers commands -- screen compositing logic 
  has all been abstracted out into sdl_common.c instead of being 
  nearly-duplicated in opengl.c and pure.c - Michael

0.6.1 (maintenance release):
- The Unicode Private Use Area is no longer considered printable.  This 
  is a stopgap to handle unusual behavior with text entry under OS X.  
  See bug #942 for more details - Michael
- Do not rely on GL_UNPACK_SKIP_* arguments, which some OpenGL drivers 
  mishandle (Bug #914) - Michael
- Do not overwrite GLOBAL_SIS (CrewEnlisted) when leaving Hyperspace 
  (Bug #938) - Michael
- Fixed a text entry width problem that was deleting control template 
  names (Bug #947) - Michael
- uio cleanups, documentation - SvdB
- uio path parsing fixes/improvements - SvdB
  - Windows UNC path support (#907)
  - Windows drive-relative paths ("D:path" without a path seperator)
  - treat multiple consecutive path seperators as one (like POSIX)
- config dir no longer needs trailing path seperator (bug #738)- SvdB
- Simplification of uio Stream functions. No more internal seeks. - SvdB
	
0.6.0: